# gpuPfem2

./: .gitignore  CMakeLists.txt  README.md
cases/Cylinder2D/: CMakeLists.txt  CylinderMesh.hdf  main.cu
cases/PoiseuilleCreepingFlow2D/: CMakeLists.txt  ChannelMesh.hdf  main.cu
cases/PoiseuilleFlow2D/: CMakeLists.txt  main.cu
cases/Poisson2D/: CMakeLists.txt  main.cu
cases/Poisson3D/: Box.hdf  CMakeLists.txt  main.cu
cmake/: functions.cmake
data/: TestProblem.hdf
src/: Dirichlet_bcs.cu  Dirichlet_bcs.cuh  data_export.cu  data_export.cuh  data_export_3d.cu  data_export_3d.cuh  geometry.cuh  linear_solver.cu  linear_solver.cuh  main.cu  mesh_2d.cu  mesh_2d.cuh  mesh_3d.cu  mesh_3d.cuh  numerical_integrator_2d.cu  numerical_integrator_2d.cuh  numerical_integrator_3d.cuh  parameters.cuh  preconditioners.cu  preconditioners.cuh  quadrature_formula_1d.cu  quadrature_formula_1d.cuh  quadrature_formula_2d.cu  quadrature_formula_2d.cuh  quadrature_formula_3d.cuh  sparse_matrix.cu  sparse_matrix.cuh
src/common/: constants.h  cuda_helper.cu  cuda_helper.cuh  cuda_math.cu  cuda_math.cuh  cuda_memory.cuh  device_vector.cuh  gpu_timer.cuh  matrix3x3.cuh  matrix4x4.cuh  profiling.h  utilities.cpp  utilities.h
src/integration/: numerical_integrator_2d.cuh  numerical_integrator_3d.cuh  quadrature_formula_1d.cu  quadrature_formula_1d.cuh  quadrature_formula_2d.cuh  quadrature_formula_3d.cu  quadrature_formula_3d.cuh
src/linear_algebra/: linear_algebra.h  linear_solver.cu  linear_solver.cuh  preconditioners.cu  preconditioners.cuh  sparse_matrix.cu  sparse_matrix.cuh
src/particles/: particle_2d.cu  particle_2d.cuh  particle_handler_2d.cu  particle_handler_2d.cuh
